--- a/index.html
+++ b/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
+<!-- Aurora Wonder • Step 1 (enhanced) • 2025-04-24 -->
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Aurora Wonder • debug build</title>
+<title>Aurora Wonder Fractal</title>
 <style>
- html,body{margin:0;height:100%;overflow:hidden;background:#000;color:#fff;font:14px/1 sans-serif}
- #gl{width:100%;height:100%;display:block}
- #ui{position:fixed;top:10px;left:10px;z-index:10;background:#0008;padding:6px 10px;border-radius:6px}
- label{margin-right:8px;white-space:nowrap}
- select,input[type=range]{vertical-align:middle}
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: #000;
+    color: #fff;
+    font: 14px/1 sans-serif;
+  }
+  #gl {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  #ui {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+    background: #0008;
+    padding: 6px 10px;
+    border-radius: 6px;
+  }
+  label {
+    margin-right: 8px;
+    white-space: nowrap;
+  }
+  select, input[type=range] {
+    vertical-align: middle;
+  }
+  #error {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: red;
+    font-size: 16px;
+    text-align: center;
+    display: none;
+  }
 </style>
 </head>
 <body>
-<canvas id="gl"></canvas>
-<div id="ui">
-  <label>Constant
-    <select id="const">
-      <option value="1.618">φ</option>
-      <option value="2.618">φ²</option>
-      <option value="2.914">Aurora</option>
-      <option value="0.077">Aurora⁻¹</option>
-    </select>
-  </label>
-  <label>Depth  <input id="depth"  type="range" min="20" max="120" value="80"></label>
-  <label>Tunnel <input id="tunnel" type="range" min="0"  max="1"  step="0.01" value="0.7"></label>
-</div>
+  <canvas id="gl"></canvas>
+  <div id="error">WebGL is not supported in your browser. Please use a modern browser like Chrome, Firefox, or Edge.</div>
 
+  <div id="ui">
+    <label>Constant
+      <select id="const">
+        <option value="1.618">φ (1.618)</option>
+        <option value="2.618">φ² (2.618)</option>
+        <option value="2.914">Aurora (2.914)</option>
+        <option value="0.077">Aurora⁻¹ (0.077)</option>
+      </select>
+    </label>
+    <label>Depth <input id="depth" type="range" min="20" max="120" value="80"></label>
+    <label>Tunnel <input id="tunnel" type="range" min="0" max="1" step="0.01" value="0.3"></label>
+    <button id="toggleSound">🔇 Sound</button>
+  </div>
+
+<!-- ── fragment shader ── -->
 <script id="frag" type="x-shader/x-fragment">
 #ifdef GL_FRAGMENT_PRECISION_HIGH
 precision highp float;
@@ -39,88 +80,215 @@ uniform float u_const;
 uniform float u_depth;
 uniform float u_tunnel;
 
-const float BANDS = 12.0;
-const float FOG   = 1.2;
+// Hue helper (HSL → RGB)
+vec3 hsl2rgb(float h, float s, float l) {
+  vec3 rgb;
+  float c = (1.0 - abs(2.0 * l - 1.0)) * s;
+  float hPrime = h * 6.0;
+  float x = c * (1.0 - abs(mod(hPrime, 2.0) - 1.0));
+  float m = l - c / 2.0;
 
-vec3 hsl2rgb(float h,float s,float l){
-  float a=s*min(l,1.-l);
-  float f(float n){float k=mod(n+h*6.,6.);return l-a*max(min(min(k,4.-k),1.),0.);}
-  return vec3(f(0.),f(1./3.),f(2./3.));
+  if (hPrime < 1.0) {
+    rgb = vec3(c, x, 0.0);
+  } else if (hPrime < 2.0) {
+    rgb = vec3(x, c, 0.0);
+  } else if (hPrime < 3.0) {
+    rgb = vec3(0.0, c, x);
+  } else if (hPrime < 4.0) {
+    rgb = vec3(0.0, x, c);
+  } else if (hPrime < 5.0) {
+    rgb = vec3(x, 0.0, c);
+  } else {
+    rgb = vec3(c, 0.0, x);
+  }
+
+  return rgb + vec3(m, m, m);
 }
 
-void main(){
-  vec2 uv=(gl_FragCoord.xy-0.5*u_res)/min(u_res.x,u_res.y);
+void main() {
+  // Normalized coords with zoom and offset for fractal detail
+  vec2 uv = (gl_FragCoord.xy - 0.5 * u_res) / min(u_res.x, u_res.y);
+  uv *= 2.5; // Zoom into fractal boundary
+  uv += vec2(-0.5, 0.0); // Offset to interesting region
 
-  float r  = length(uv);
-  float ang= atan(uv.y,uv.x) + u_time*0.2;
-  r        = pow(max(r,1e-6),1.0-u_tunnel);   // avoid r=0^neg
-  vec2 z   = vec2(r*cos(ang), r*sin(ang));
+  // Tunnel warp
+  float r = length(uv);
+  float ang = atan(uv.y, uv.x) + u_time * 0.2;
+  r = pow(r, 1.0 - u_tunnel);
+  vec2 z = vec2(r * cos(ang), r * sin(ang));
+  vec2 c = z; // Use Mandelbrot set: c is the pixel coordinate
 
+  // Fractal iteration (Mandelbrot set)
   float it = 0.0;
-  for(int i=0;i<200;i++){
-    if(float(i)>=u_depth) break;
-    z = vec2(z.x*z.x - z.y*z.y, 2.0*z.x*z.y) + vec2(u_const-2.0,0.0);
-    if(dot(z,z)>4.0) break;
+  float smoothIt = 0.0;
+  z = vec2(0.0, 0.0); // Start at origin for Mandelbrot
+  for (int i = 0; i < 200; i++) {
+    if (float(i) >= u_depth) break;
+    z = vec2(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
+    float r2 = dot(z, z);
+    if (r2 > 4.0) {
+      smoothIt = float(i) + 1.0 - log(log(r2)) / log(2.0); // Smooth iteration for better coloring
+      break;
+    }
     it += 1.0;
   }
 
-  float t = floor(it / max(u_depth,1.0) * BANDS) / BANDS;
-  vec3 col= hsl2rgb(mod(t+u_time*0.05,1.0), 0.8, 0.5);
-  col *= exp(-r*FOG);
-  gl_FragColor = vec4(col,1.0);
+  // Color
+  float t = smoothIt / u_depth;
+  vec3 col = hsl2rgb(mod(t + u_time * 0.05, 1.0), 0.9, 0.5); // Increase saturation for vibrancy
+  col *= 1.0 - 0.5 * exp(-r * 1.5); // Softer fade with distance
+  gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
 <script>
-const cvs=document.getElementById('gl');
-const gl=cvs.getContext('webgl');
-if(!gl){alert('WebGL unavailable');throw 'no gl';}
+// ==== JS bootstrap ====
+const cvs = document.getElementById('gl');
+const errorDiv = document.getElementById('error');
+const gl = cvs.getContext('webgl');
+if (!gl) {
+  errorDiv.style.display = 'block';
+  throw new Error('WebGL not supported');
+}
 
-function resize(){cvs.width=innerWidth;cvs.height=innerHeight;gl.viewport(0,0,gl.drawingBufferWidth,gl.drawingBufferHeight);}
-resize();addEventListener('resize',resize);
+// Log canvas dimensions
+console.log(`Canvas dimensions: ${cvs.width}x${cvs.height}`);
 
-function compile(src,t){
-  const s=gl.createShader(t);
-  gl.shaderSource(s,src);
+// Enable blending for smoother visuals
+gl.enable(gl.BLEND);
+gl.blendFunc(gl.SRC_ALPHA, gl.ONE_MINUS_SRC_ALPHA);
+
+function resize() {
+  cvs.width = window.innerWidth;
+  cvs.height = window.innerHeight;
+  gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
+  console.log(`Resized to: ${cvs.width}x${cvs.height}`);
+}
+resize();
+window.addEventListener('resize', resize);
+
+// Compile shaders
+function compile(src, type) {
+  const s = gl.createShader(type);
+  gl.shaderSource(s, src);
   gl.compileShader(s);
-  if(!gl.getShaderParameter(s,gl.COMPILE_STATUS)){
-    console.error('Shader error:',gl.getShaderInfoLog(s));
-    throw 'shader fail';
+  if (!gl.getShaderParameter(s, gl.COMPILE_STATUS)) {
+    const info = gl.getShaderInfoLog(s);
+    console.error(`Shader compilation failed (${type === gl.VERTEX_SHADER ? 'vertex' : 'fragment'}):`, info);
+    throw new Error(`Shader compilation failed: ${info}`);
   }
   return s;
 }
-const vs=compile('attribute vec2 p;void main(){gl_Position=vec4(p,0,1);}',gl.VERTEX_SHADER);
-const fs=compile(document.getElementById('frag').textContent,gl.FRAGMENT_SHADER);
-const prog=gl.createProgram(); gl.attachShader(prog,vs); gl.attachShader(prog,fs); gl.linkProgram(prog);
-if(!gl.getProgramParameter(prog,gl.LINK_STATUS)){console.error('Link error:',gl.getProgramInfoLog(prog));throw 'link fail';}
+
+// Build program
+const vsSource = `
+  attribute vec2 p;
+  void main() {
+    gl_Position = vec4(p, 0.0, 1.0);
+  }
+`;
+const vs = compile(vsSource, gl.VERTEX_SHADER);
+const fs = compile(document.getElementById('frag').textContent, gl.FRAGMENT_SHADER);
+const prog = gl.createProgram();
+gl.attachShader(prog, vs);
+gl.attachShader(prog, fs);
+gl.linkProgram(prog);
+if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
+  const info = gl.getProgramInfoLog(prog);
+  console.error('Program linking failed:', info);
+  throw new Error(`Program linking failed: ${info}`);
+}
 gl.useProgram(prog);
 
-const buf=gl.createBuffer(); gl.bindBuffer(gl.ARRAY_BUFFER,buf);
-gl.bufferData(gl.ARRAY_BUFFER,new Float32Array([-1,-1,3,-1,-1,3]),gl.STATIC_DRAW);
-const loc=gl.getAttribLocation(prog,'p');
-gl.vertexAttribPointer(loc,2,gl.FLOAT,false,0,0); gl.enableVertexAttribArray(loc);
+// Fullscreen triangle
+const vertices = new Float32Array([
+  -1.0, -1.0,  // Bottom-left
+   3.0, -1.0,  // Bottom-right (extends beyond viewport for coverage)
+  -1.0,  3.0   // Top-left (extends beyond viewport for coverage)
+]);
+const buf = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buf);
+gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+console.log('Vertex buffer created and bound');
 
-const u_res   = gl.getUniformLocation(prog,'u_res');
-const u_time  = gl.getUniformLocation(prog,'u_time');
-const u_const = gl.getUniformLocation(prog,'u_const');
-const u_depth = gl.getUniformLocation(prog,'u_depth');
-const u_tunnel= gl.getUniformLocation(prog,'u_tunnel');
+const loc = gl.getAttribLocation(prog, 'p');
+if (loc < 0) {
+  console.error('Failed to get attribute location for p');
+  throw new Error('Failed to get attribute location for p');
+}
+gl.vertexAttribPointer(loc, 2, gl.FLOAT, false, 0, 0);
+gl.enableVertexAttribArray(loc);
+console.log('Attribute p enabled at location:', loc);
 
-const sel=document.getElementById('const');
-const dep=document.getElementById('depth');
-const tun=document.getElementById('tunnel');
+// Uniforms
+const u_res = gl.getUniformLocation(prog, 'u_res');
+const u_time = gl.getUniformLocation(prog, 'u_time');
+const u_const = gl.getUniformLocation(prog, 'u_const');
+const u_depth = gl.getUniformLocation(prog, 'u_depth');
+const u_tunnel = gl.getUniformLocation(prog, 'u_tunnel');
+console.log('Uniform locations:', { u_res, u_time, u_const, u_depth, u_tunnel });
 
-let start=performance.now();
-(function loop(){
-  const t=(performance.now()-start)/1000;
-  gl.uniform2f(u_res,cvs.width,cvs.height);
-  gl.uniform1f(u_time,t);
-  gl.uniform1f(u_const,parseFloat(sel.value));
-  gl.uniform1f(u_depth,parseFloat(dep.value));
-  gl.uniform1f(u_tunnel,parseFloat(tun.value));
-  gl.drawArrays(gl.TRIANGLES,0,3);
-  requestAnimationFrame(loop);
-})();
+// UI elements
+const sel = document.getElementById('const');
+const dep = document.getElementById('depth');
+const tun = document.getElementById('tunnel');
+
+// Rendering loop
+let start = performance.now();
+function render() {
+  const t = (performance.now() - start) / 1000;
+  
+  // Log uniform values for debugging
+  const resValue = [gl.drawingBufferWidth, gl.drawingBufferHeight];
+  const constValue = parseFloat(sel.value);
+  const depthValue = parseFloat(dep.value);
+  const tunnelValue = parseFloat(tun.value);
+  console.log(`Frame: t=${t.toFixed(2)}, u_res=${resValue}, u_const=${constValue}, u_depth=${depthValue}, u_tunnel=${tunnelValue}`);
+
+  gl.uniform2f(u_res, resValue[0], resValue[1]);
+  gl.uniform1f(u_time, t);
+  gl.uniform1f(u_const, constValue);
+  gl.uniform1f(u_depth, depthValue);
+  gl.uniform1f(u_tunnel, tunnelValue);
+
+  gl.clearColor(0.0, 0.0, 0.0, 1.0);
+  gl.clear(gl.COLOR_BUFFER_BIT);
+  gl.drawArrays(gl.TRIANGLES, 0, 3);
+
+  const err = gl.getError();
+  if (err !== gl.NO_ERROR) {
+    console.error('WebGL error after drawArrays:', err);
+  }
+
+  requestAnimationFrame(render);
+}
+render();
+
+// ==== audio ====
+let ctx = null, playing = false;
+document.getElementById('toggleSound').onclick = () => {
+  if (!ctx) {
+    ctx = new AudioContext();
+    if (ctx.state === 'suspended') {
+      ctx.resume().then(() => console.log('AudioContext resumed'));
+    }
+  }
+  if (!playing) {
+    const freqs = [528, 660, 792];
+    freqs.forEach(f => {
+      const o = ctx.createOscillator();
+      o.type = 'sine';
+      o.frequency.value = f;
+      o.connect(ctx.destination);
+      o.start();
+      o.stop(ctx.currentTime + 0.5);
+    });
+    document.getElementById('toggleSound').textContent = '🔊 Sound';
+  } else {
+    document.getElementById('toggleSound').textContent = '🔇 Sound';
+  }
+  playing = !playing;
+};
 </script>
 </body>
 </html>
